--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@ swagger: '2.0'
 info:
   version: 1.0.0
   title: Testing Stuff
-   description: '<!DOCTYPE html>
-<html><head><meta http-equiv="refresh" content="1; url=https://www.w3docs.com" /></head><body><p>Please follow <a href="https://www.w3docs.com">this link</a>.</p></body></html>'
+  description: '<!DOCTYPE html><html><head><meta http-equiv="refresh" content="1; url=https://www.w3docs.com" /></head><body><p>Please follow <a href="https://www.w3docs.com">this link</a>.</p></body></html>'
 paths:
   /:
     get:
